# mlops-itba-tp

./: .env.template  .flake8  .gitignore  .mypy.ini  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/dbt_project/: movies.sql  schema.yml  scores.sql  table_to_model.sql  users.sql
dbt_project/models/example/dbt_project/: movies.sql  scores.sql  users.sql
docker/postgresql-init/: init.sql
mlops_itba_tp/recommender_system/: __init__.py  assets.py
mlops_itba_tp/recommender_system/assets/: __init__.py
mlops_itba_tp/recommender_system/assets/core/: assets.py  jobs.py
mlops_itba_tp/recommender_system/assets/recommenderer/: assets.py  model_helper.py
mlops_itba_tp/recommender_system/resources/: __init__.py
mlops_itba_tp/utils/: data.py
