[tool.poetry]
name = "mlops-itba-tp"
version = "0.1.0"
description = ""
authors = ["Mauricio Anderson <m.anderson.ricci@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_itba_tp"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
mlflow = "^2.9.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
dbt-postgres = "^1.7.3"
sqlalchemy = "^2.0.23"
boto3 = "^1.34.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-isort = "^6.1.1"
flake8-black = "^0.3.6"
mypy = "^1.8.0"
pylint = "^3.0.3"


[tool.poetry.group.dagster.dependencies]
dagster = "^1.5.12"
dagster-webserver = "^1.5.12"
dagster-mlflow = "^0.21.12"
tensorflow = "2.14.0"
dagster-airbyte = "^0.21.13"
dagster-dbt = "^0.21.13"


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = true
use_parentheses = true
include_trailing_comma = true
force_sort_within_sections = true
known_first_party="mlops_itba_tp"
known_third_party="numpy, mlflow"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "mlops_itba_tp.recommender_system"
